2005-01-05 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.cc, src/gpsim_classes.h, src/gpsim_interface.h,
	src/interface.cc, src/modules.cc, src/modules.h,
	src/pic-processor.cc, src/protocol.cc, src/protocol.h,
	cli/command.cc, cli/socket.cc:
	Enhancements to support the socket interface. Added a run command
	and a reset command and made them invocable via the interface class.

2005-01-02 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, cli/input.cc, src/interface.cc: Added function
	'gUseThreads()' and use it to run-time select the usage of threads.
	
2005-01-02 Borut Razem <borut.razem@siol.net>
	* gui/gui_break.cc, gui/dialog.cc, gui/gui_init.cc, gui/gui_menu.cc,
	  gui/gui_processor.cc, gui/gui_src.cc, gui/gui_src_asm.cc
	  gui/gui_src_opcode.cc: removed unneeded include gtkcombobox.h
	* gui/gui_breadboard.cc: fixed compiler warnings
	* cli/Makefile.am, gui/Makefile.am: added AM_ preffix to CFLAGS,
	  CXXFLAGS, CPPFLAGS and YFLAGS
	* doc/gpsimWin32.html: gtk+ version 2.4.14, XHTML 1.0 Transitional compliant,
	  gtk+extra-2-1.1.0-20050102
	* doc/gpsim_cvs.html: changed first build instructions

2004-12-17 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, src/interface.cc, cli/socket.cc: removed
	dependencies on GTK 2.0.


2004-12-19 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: added examples/scripts/client_interface.h
	  to installation
	* mingw/makefile.mingw, gpsim/gpsim.vcproj: added gthread-2.0.lib
	* src/src.vcproj: removed plat\win32\glist.cpp from project; CLI
	  mode now requires linking with full glib library; added src/trigger.cc
	  and src/trigger.h to the project
	* modules/modules.vcproj: pthreads to the project
	* gpsim.sln: removed building of modules in CLI configuration

2004-12-17 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, src/interface.cc: replaced pthread_* calls and
	declarations with the corresponding GTK ones.

2004-12-17 Scott Dattalo <scott@dattalo.com>